Fixes reservation data label getting too close to the value in certain cases. Closes #8

--- a/seantis/reservation/css/teamraum/resource.css
+++ b/seantis/reservation/css/teamraum/resource.css
@@ -287,6 +287,7 @@ div.error {
     display: inline-block;
     min-width: 75px;
     margin-top: 3px;
+    margin-right: 12px;
 }
 
 .reservation-list .block-title {
